bot name through process.env, now with docker-compose.yml

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-DISCORD_TOKEN=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-CRYPTO=bitcoin
-FIAT=usd
-DELAY=33333
+DISCORD_TOKEN=
+TIMEZONE=
+BOT_NAME=
+API_KEY=
+DELAY=
